"Enter name" = "Enter name";
"Garment name" = "Garment name";
"Save" = "Save";
"Add" = "Add";
"List" = "List";

